@@ -2,7 +2,6 @@ package seedu.address.storage;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -11,6 +10,7 @@ import com.fasterxml.jackson.annotation.JsonRootName;
 import seedu.address.commons.exceptions.IllegalValueException;
 import seedu.address.model.AddressBook;
 import seedu.address.model.ReadOnlyAddressBook;
+import seedu.address.model.consultation.Consultation;
 import seedu.address.model.student.Student;
 
 /**
@@ -22,13 +22,21 @@ class JsonSerializableAddressBook {
     public static final String MESSAGE_DUPLICATE_STUDENT = "Students list contains duplicate student(s).";
 
     private final List<JsonAdaptedStudent> students = new ArrayList<>();
+    private final List<JsonAdaptedConsultation> consults = new ArrayList<>();
 
     /**
-     * Constructs a {@code JsonSerializableAddressBook} with the given students.
+     * Constructs a {@code JsonSerializableAddressBook} with the given data.
      */
     @JsonCreator
-    public JsonSerializableAddressBook(@JsonProperty("students") List<JsonAdaptedStudent> students) {
-        this.students.addAll(students);
+    public JsonSerializableAddressBook(@JsonProperty("students") List<JsonAdaptedStudent> students,
+                                       @JsonProperty("consults") List<JsonAdaptedConsultation> consults) {
+        // Null checks are required in case an address book has students but no consults etc.
+        if (students != null) {
+            this.students.addAll(students);
+        }
+        if (consults != null) {
+            this.consults.addAll(consults);
+        }
     }
 
     /**
@@ -37,7 +45,8 @@ class JsonSerializableAddressBook {
      * @param source future changes to this will not affect the created {@code JsonSerializableAddressBook}.
      */
     public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
-        students.addAll(source.getStudentList().stream().map(JsonAdaptedStudent::new).collect(Collectors.toList()));
+        students.addAll(source.getStudentList().stream().map(JsonAdaptedStudent::new).toList());
+        consults.addAll(source.getConsultList().stream().map(JsonAdaptedConsultation::new).toList());
     }
 
     /**
@@ -53,6 +62,10 @@ class JsonSerializableAddressBook {
                 throw new IllegalValueException(MESSAGE_DUPLICATE_STUDENT);
             }
             addressBook.addStudent(student);
+        }
+        for (JsonAdaptedConsultation jsonAdaptedConsultation : consults) {
+            Consultation consult = jsonAdaptedConsultation.toModelType(addressBook);
+            addressBook.addConsult(consult);
         }
         return addressBook;
     }
